--- a/omasivu.html
+++ b/omasivu.html
@@ -19,6 +19,7 @@
                     <h1>Mikä eläin on kuvassa?</h1> 
                 </td>
                 <td>
+<!-- tässä on testikommentti -->
 <!--tästä alkaa bootstrapista noudettu navbar-->
                     <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
                         <div class="container-fluid">
