--- a/omasivu.html
+++ b/omasivu.html
@@ -50,7 +50,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-md-6 col-sm-12" id="kettu"> 
+            <div class="col-md-12 col-sm-12" id="kettu"> 
+                <p>Kuva 1/5</p>
                 <img src="./elaintietoimages/fox.jpg" class="kuva" alt="fox"><br>
                 <input type="radio" name="answer" class="wrong"> Kissa<br>
                 <input type="radio" name="answer" id="right1"> Kettu<br>
@@ -59,7 +60,8 @@
                 <button id="tarkista1" class="button" onclick="v1()">Tarkista</button>
                 <p id="feedback1"></p>
             </div>
-            <div class="col-md-6 col-sm-12" id="karhu">
+            <div class="col-md-12 col-sm-12" id="karhu">
+                <p>Kuva 2/5</p>
                 <img src="./elaintietoimages/bear.jpg" class="kuva" alt="bear"><br>
                 <input type="radio" name="answer"  class="wrong"> Ahma<br>
                 <input type="radio" name="answer"  class="wrong"> Panda<br>
@@ -70,7 +72,8 @@
             </div>
         <div class="row">
 
-            <div class="col-md-6 col-sm-12"id="orava" > 
+            <div class="col-md-12 col-sm-12"id="orava" > 
+                <p>Kuva 3/5</p>
                 <img src="./elaintietoimages/squirrel.jpg" class="kuva" alt="squirrel"><br>
                 <input type="radio" name="answer" class="wrong"> Marsu<br>
                 <input type="radio" name="answer" class="wrong"> Norsu<br>
@@ -80,7 +83,8 @@
                 <p id="feedback3"></p>
             </div>        
 
-            <div class="col-md-6 col-sm-12"id="ilves">
+            <div class="col-md-12 col-sm-12"id="ilves">
+                <p>Kuva 4/5</p>
                 <img src="./elaintietoimages/lynx.jpg"   class="kuva" alt="lynx"><br>
                 <input type="radio" name="answer" class="wrong"> Pantteri<br>
                 <input type="radio" name="answer" id="right4"> Ilves<br>
@@ -92,7 +96,8 @@
         </div>
         
         <div class="row">
-            <div class="col-md-6 col-sm-12"id="jänis" >
+            <div class="col-md-12 col-sm-12"id="jänis" >
+                <p>Kuva 5/5</p>
                 <img src="./elaintietoimages/hare.jpg"  class="kuva" alt="hare"><br>
                 <input type="radio" name="answer" id="right5"> Jänis<br>
                 <input type="radio" name="answer" class="wrong"> Hiiri<br>
