started array testing

--- a/omasivu.html
+++ b/omasivu.html
@@ -51,7 +51,7 @@
     <div class="container">
 
         <button id="aloitusnappi" onclick="start()">Aloita</button>
-
+        <div id="random"></div>
         <div class="col-md-12 col-sm-12" id="kettu"> 
             <p>Kuva 1/5</p>
             <img src="./elaintietoimages/fox.jpg" class="kuva" alt="fox"><br>
