--- a/elaintieto.html
+++ b/elaintieto.html
@@ -7,19 +7,19 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <script src="ss.js" defer></script>
+    <!-- Bootstrap CSS ends-->
+    <link rel="stylesheet" href="elaintieto.css">
+    <script src="elaintieto.js" defer></script>
     <title>Eläintieto</title>
   </head>
   <body>
-    <header>
+    <header id="header">
         <table>
             <tr>
                 <td>
                     <h1>Mikä eläin on kuvassa?</h1> 
                 </td>
                 <td>
-<!-- tässä on testikommentti -->
 <!--tästä alkaa bootstrapista noudettu navbar-->
                     <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
                         <div class="container-fluid">
@@ -29,10 +29,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a><!--tuleeko tähän linkki muulle sivulle-->
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="about.html">About</a><!--tämä on linkki etusivulle-->
+                                <a class="nav-link active" aria-current="page" href="index.html">Etusivulle</a><!--linkki etusivulle-->
                             </li>
                         </div>
                         </div>
@@ -49,67 +46,71 @@
     </header>
 
     <div class="container">
-
         <button id="aloitusnappi" onclick="start()">Aloita</button>
-        <div id="random"></div>
+
+        
         <div class="col-md-12 col-sm-12" id="kettu"> 
-            <p>Kuva 1/5</p>
-            <img src="./elaintietoimages/fox.jpg" class="kuva" alt="fox"><br>
-            <input type="radio" name="answer" class="wrong"> Kissa<br>
-            <input type="radio" name="answer" id="right1"> Kettu<br>
-            <input type="radio" name="answer" class="wrong"> Ahma<br>
-            <input type="radio" name="answer" class="wrong"> Kojootti<br>
-            <button id="tarkista1" class="button" onclick="v1()">Tarkista</button>
-            <p id="feedback1"></p>
-            <button id="seuraava2" onclick="next2()">Seuraava</button>
-        </div>   
+            <table>   
+                <tr>   
+                    <td> 
+                        <img src="./elaintietoimages/fox.jpg" class="kuva" alt="fox">
+                    </td>
+                    <td>
+                        <input type="radio" name="answer" class="wrong"> Kissa<br>
+                        <input type="radio" name="answer" id="right1"> Kettu<br>
+                        <input type="radio" name="answer" class="wrong"> Ahma<br>
+                        <input type="radio" name="answer" class="wrong"> Kojootti<br>
+                        <button id="tarkista1" class="button" onclick="v1()">Tarkista</button>
+                        <td>
+                            <p id="feedback1" class="feedback"></p>
+                        </td>
+                        <td>
+                            <button id="seuraava2" onclick="next2()">Seuraava</button>
+                        </td>   
+        </div> </tr></table>
 
         <div class="col-md-12 col-sm-12" id="karhu">
-            <p>Kuva 2/5</p>
             <img src="./elaintietoimages/bear.jpg" class="kuva" alt="bear"><br>
             <input type="radio" name="answer"  class="wrong"> Ahma<br>
             <input type="radio" name="answer"  class="wrong"> Panda<br>
             <input type="radio" name="answer"  class="wrong"> Kissa<br>
             <input type="radio" name="answer" id="right2"> Karhu<br>
             <button id="tarkista2" class="button" onclick="v2()">Tarkista</button>
-            <p id="feedback2"></p>
+            <p id="feedback2"class="feedback"></p>
             <button id="seuraava3" onclick="next3()">Seuraava</button>
         </div>    
 
         <div class="col-md-12 col-sm-12"id="orava" > 
-            <p>Kuva 3/5</p>
             <img src="./elaintietoimages/squirrel.jpg" class="kuva" alt="squirrel"><br>
             <input type="radio" name="answer" class="wrong"> Marsu<br>
             <input type="radio" name="answer" class="wrong"> Norsu<br>
             <input type="radio" name="answer" id="right3"> Orava<br>
             <input type="radio" name="answer" class="wrong"> Kojootti<br>
             <button id="tarkista3" class="button" onclick="v3()">Tarkista</button> 
-            <p id="feedback3"></p>
+            <p id="feedback3"class="feedback"></p>
             <button id="seuraava4" onclick="next4()">Seuraava</button>
         </div>     
 
         <div class="col-md-12 col-sm-12"id="ilves">
-            <p>Kuva 4/5</p>
             <img src="./elaintietoimages/lynx.jpg"   class="kuva" alt="lynx"><br>
             <input type="radio" name="answer" class="wrong"> Pantteri<br>
             <input type="radio" name="answer" id="right4"> Ilves<br>
             <input type="radio" name="answer" class="wrong"> Kani<br>
             <input type="radio" name="answer" class="wrong"> Kettu<br>
             <button id="tarkista4" class="button" onclick="v4()">Tarkista</button>
-            <p id="feedback4"></p>
+            <p id="feedback4"class="feedback"></p>
             <button id="seuraava5" onclick="next5()">Seuraava</button>
         </div>
 
         <div class="col-md-12 col-sm-12"id="jänis" >
-            <p>Kuva 5/5</p>
             <img src="./elaintietoimages/hare.jpg"  class="kuva" alt="hare"><br>
             <input type="radio" name="answer" id="right5"> Jänis<br>
             <input type="radio" name="answer" class="wrong"> Hiiri<br>
             <input type="radio" name="answer" class="wrong"> Villisika<br>
             <input type="radio" name="answer" class="wrong"> Mursu<br>
             <button id="tarkista5" class="button" onclick="v5()">Tarkista</button>
-            <p id="feedback5"></p>
-            <button id="seuraava1" class="seuraava" onclick="next1()">Seuraava</button>
+            <p id="feedback5"class="feedback"></p>
+            <button id="uudestaan" class="uudestaan" onclick="again()">Aloita alusta</button>
         </div>    
 
     </div>
