--- a/elaintieto.html
+++ b/elaintieto.html
@@ -1,132 +1,154 @@
 <!doctype html>
 <html lang="en">
+
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Bootstrap CSS ends-->
-    <link rel="stylesheet" href="elaintieto.css">
-    <script src="elaintieto.js" defer></script>
+    <link rel="stylesheet" href="../styles/elaintieto.css">
+    <script src="../scripts/elaintieto.js" defer></script>
     <title>Eläintieto</title>
-  </head>
+  </head>    
+
   <body>
-    <header id="header">
-        <table>
-            <tr>
-                <td>
-                    <h1>Mikä eläin on kuvassa?</h1> 
-                </td>                
-            </tr>
-            <tr>
-                <td>
-                    <h2> Valitse oikea vastaus ja klikkaa "Tarkista".</h2>
-                </td>
-                <td>
-                  <!-- tästä alkaa bootstrapista mallista tehty navbar--> 
-                  <nav class="navbar navbar-expand-lg navbar-light bg-light"> 
-                    <div class="container-fluid">
-                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                      </button>
-                      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                          <li>
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a> <!--linkki etusivulle-->
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </nav>
-                  <!--tähän loppuu bootstrapista noudettu components alla oleva navbar-->
-                </td> 
-              </tr>
-          </table>  
-    </header>
-      <button id="aloitusnappi" onclick="start()">Aloita</button>
-      <p id="progress">Edistyminen:</p>
-      <table id="progressBar">
+    <!-- common header with main page below will be added when pages combined-->
+    <!-- <header><img src="../images/elaintieto_logo.png" alt="header"></header> -->
+    <!-- Navigation from bootstrap-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand">Navigointi</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Pääsivu</a>
+              <li class="nav-item">
+                  <a class="nav-link" href="english.html">English test</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="Jesse.html">Historiavisa</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="yleisvisa.html">Yleisvisa</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="elaintieto.html">Eläintieto</a>
+                </li>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="tietoja.html">Tietoja</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- Navigation ends-->
+    <!-- my own "header" starts -->
+    <article id="header">
+      <table>
         <tr>
-          <td id="firstBlock" class="block"></td>
-          <td id="secondBlock" class="block"></td>          
-          <td id="thirdBlock" class="block" ></td>
-          <td id="fourthBlock" class="block"></td>
-          <td id="fifthBlock" class="block"></td>     
+          <td>
+            <h1>Mikä eläin on kuvassa?</h1> 
+          </td>                
         </tr>
-      </table>
-        <div class="col-md-12 col-sm-12" id="kettu"> 
-          <img src="./elaintietoimages/fox.jpg" class="kuva" alt="fox">        
-          <input type="radio" name="answer" class="wrong"> Kissa<br>
-          <input type="radio" name="answer" id="right1"> Kettu<br>
-          <input type="radio" name="answer" class="wrong"> Ahma<br>
-          <input type="radio" name="answer" class="wrong"> Kojootti<br>
-          <button id="tarkista1" class="button" onclick="v1()">Tarkista</button>
-          <p id="feedback1" class="feedback"></p>
-          <button id="seuraava2" onclick="next2()">Seuraava</button>       
-        </div> 
-
-        <div class="col-md-12 col-sm-12" id="karhu">
-            <img src="./elaintietoimages/bear.jpg" class="kuva" alt="bear"><br>
-            <input type="radio" name="answer"  class="wrong"> Ahma<br>
-            <input type="radio" name="answer"  class="wrong"> Panda<br>
-            <input type="radio" name="answer"  class="wrong"> Kissa<br>
-            <input type="radio" name="answer" id="right2"> Karhu<br>
-            <button id="tarkista2" class="button" onclick="v2()">Tarkista</button>
-            <p id="feedback2" class="feedback"></p>
-            <button id="seuraava3" onclick="next3()">Seuraava</button>
-        </div>    
-
-        <div class="col-md-12 col-sm-12" id="orava" > 
-            <img src="./elaintietoimages/squirrel.jpg" class="kuva" alt="squirrel"><br>
-            <input type="radio" name="answer" class="wrong"> Marsu<br>
-            <input type="radio" name="answer" class="wrong"> Norsu<br>
-            <input type="radio" name="answer" id="right3"> Orava<br>
-            <input type="radio" name="answer" class="wrong"> Kojootti<br>
-            <button id="tarkista3" class="button" onclick="v3()">Tarkista</button> 
-            <p id="feedback3" class="feedback"></p>
-            <button id="seuraava4" onclick="next4()">Seuraava</button>
-        </div>     
-
-        <div class="col-md-12 col-sm-12" id="ilves">
-            <img src="./elaintietoimages/lynx.jpg"   class="kuva" alt="lynx"><br>
-            <input type="radio" name="answer" class="wrong"> Pantteri<br>
-            <input type="radio" name="answer" id="right4"> Ilves<br>
-            <input type="radio" name="answer" class="wrong"> Kani<br>
-            <input type="radio" name="answer" class="wrong"> Kettu<br>
-            <button id="tarkista4" class="button" onclick="v4()">Tarkista</button>
-            <p id="feedback4" class="feedback"></p>
-            <button id="seuraava5" onclick="next5()">Seuraava</button>
-        </div>
-
-        <div class="col-md-12 col-sm-12" id="jänis" >
-            <img src="./elaintietoimages/hare.jpg"  class="kuva" alt="hare"><br>
-            <input type="radio" name="answer" id="right5"> Jänis<br>
-            <input type="radio" name="answer" class="wrong"> Hiiri<br>
-            <input type="radio" name="answer" class="wrong"> Villisika<br>
-            <input type="radio" name="answer" class="wrong"> Mursu<br>
-            <button id="tarkista5" class="button" onclick="v5()">Tarkista</button>
-            <p id="feedback5" class="feedback"></p>
-            <button id="tulos" class="tulos" onclick="again()">Katso tulos</button>
-        </div>  
-
-        <div class="col-md-12 col-sm-12" id="prize" >
-                <img src="./elaintietoimages/bear.jpg" class="kuva" alt="bear">
-                <img src="./elaintietoimages/lynx.jpg"   class="kuva" alt="lynx">
-                <img src="./elaintietoimages/squirrel.jpg" class="kuva" alt="squirrel">
-                <p id="feedbackEnd"> Hienoa! Sait kaikki oikein.</p>
-                <button id="uudestaan" class="uudestaan" onclick="again()">Aloita alusta</button>
-        </div>
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script> -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-   
+        <tr>
+          <td>
+            <h2> Valitse oikea vastaus ja klikkaa "Tarkista"</h2>
+          </td>
+          <td><button id="aloitusnappi" onclick="start()">Aloita tästä</button> 
+          </td>
+        </tr>
+      </table>  
+    </article>
+    <!-- questions-blocks below-->
+    <div class="col-md-12 col-sm-12" id="kettu"> 
+      <a href="https://pixabay.com/fi/photos/kettu-mets%c3%a4-luonne-el%c3%a4in-nis%c3%a4k%c3%a4s-7107267/" target="picture">
+      <img src="elaintietoimages/fox.jpg" class="kuva" alt="fox">
+      </a> <!-- <img src="../elaintietoimages/fox.jpg" class="kuva" alt="fox"> this was the fox picture, 
+      replaced with the sentence above to give a link to the original. Same added to other question blocks.-->
+      <input type="radio" name="answer" class="wrong"> Kissa<br>
+      <input type="radio" name="answer" id="right1"> Kettu<br>
+      <input type="radio" name="answer" class="wrong"> Ahma<br>
+      <input type="radio" name="answer" class="wrong"> Kojootti<br>
+      <button id="tarkista1" class="button" onclick="v1()">Tarkista</button>
+      <p id="feedback1" class="feedback"></p>
+      <button id="seuraava2" onclick="next2()">Seuraava</button>     
+    </div>     
+    <div class="col-md-12 col-sm-12" id="karhu">
+      <a href="https://pixabay.com/fi/photos/karhu-villi-luonne-er%c3%a4maa-el%c3%a4imet-4838870/" target="picture">
+      <img src="elaintietoimages/bear.jpg" class="kuva" alt="bear">
+      </a>
+      <input type="radio" name="answer"  class="wrong"> Ahma<br>
+      <input type="radio" name="answer"  class="wrong"> Panda<br>
+      <input type="radio" name="answer"  class="wrong"> Kissa<br>
+      <input type="radio" name="answer" id="right2"> Karhu<br>
+      <button id="tarkista2" class="button" onclick="v2()">Tarkista</button>
+      <p id="feedback2" class="feedback"></p>
+      <button id="seuraava3" onclick="next3()">Seuraava</button>
+    </div>
+    <div class="col-md-12 col-sm-12" id="orava" > 
+      <a href="https://pixabay.com/fi/photos/punainen-orava-jyrsij%c3%a4-el%c3%a4in-orava-570936/" target="picture">
+      <img src="elaintietoimages/squirrel.jpg" class="kuva" alt="squirrel">
+      </a>
+      <input type="radio" name="answer" class="wrong"> Marsu<br>
+      <input type="radio" name="answer" class="wrong"> Norsu<br>
+      <input type="radio" name="answer" id="right3"> Orava<br>
+      <input type="radio" name="answer" class="wrong"> Kojootti<br>
+      <button id="tarkista3" class="button" onclick="v3()">Tarkista</button> 
+      <p id="feedback3" class="feedback"></p>
+      <button id="seuraava4" onclick="next4()">Seuraava</button>
+    </div>    
+    <div class="col-md-12 col-sm-12" id="ilves">
+      <a href="https://pixabay.com/fi/photos/ilves-el%c3%a4in-iso-kissa-nis%c3%a4k%c3%a4s-6614526/" target="picture">
+      <img src="elaintietoimages/lynx.jpg"   class="kuva" alt="lynx">
+      </a>
+      <input type="radio" name="answer" class="wrong"> Pantteri<br>
+      <input type="radio" name="answer" id="right4"> Ilves<br>
+      <input type="radio" name="answer" class="wrong"> Kani<br>
+      <input type="radio" name="answer" class="wrong"> Kettu<br>
+      <button id="tarkista4" class="button" onclick="v4()">Tarkista</button>
+      <p id="feedback4" class="feedback"></p>
+      <button id="seuraava5" onclick="next5()">Seuraava</button>
+    </div>
+    <div class="col-md-12 col-sm-12" id="jänis" >
+      <a href="https://pixabay.com/fi/photos/nuori-j%c3%a4nis-j%c3%a4niksenpoika-j%c3%a4nis-5374701/" target="picture">
+      <img src="elaintietoimages/hare.jpg"  class="kuva" alt="hare">
+      </a>
+      <input type="radio" name="answer" id="right5"> Jänis<br>
+      <input type="radio" name="answer" class="wrong"> Hiiri<br>
+      <input type="radio" name="answer" class="wrong"> Villisika<br>
+      <input type="radio" name="answer" class="wrong"> Mursu<br>
+      <button id="tarkista5" class="button" onclick="v5()">Tarkista</button>
+      <p id="feedback5" class="feedback"></p>
+      <button id="tulos" class="tulos" onclick="again()">Katso tulos</button>
+    </div>   
+    <div class="col-md-12 col-sm-12" id="prize" >
+      <p id="feedbackEnd"> Hienoa! Sait kaikki oikein!</p>
+      <button id="uudestaan" class="uudestaan" onclick="again()">Aloita alusta</button>
+      <!-- prize picture to be added -->
+      </a>  
+    </div>      
+    <!-- bootstrap progress-bar below -->
+    <div class="col-md-6 col-lg" id="progressinfo">
+      <p class="progress" id="progressLabel">Edistyminen: <span id="answersOk"></span>/5 </p>
+      <progress class="progress" id="progressBar" value="0" max="5"></progress>
+    </div>
+    <!-- bootstrap script below-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" 
+    crossorigin="anonymous">
+    </script> 
+    <!-- common footer with main page below, added my own page information --> 
+    <div class="row">
+      <div class="col-md-12">
+          <footer>
+              <p> Eläintieto: P. Karhumaa 2022 (TIK22KM), n1kapa00@students.oamk.fi </p>
+          </footer>
+      </div>
+    </div>
   </body>
 </html>
